--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,36 +4,16 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:background="@drawable/bg1">
+    android:background="@drawable/main">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="#adbaf2"
-        android:gravity="center"
-        android:text="登录"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:layout_weight="4"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.1"
-            android:orientation="vertical"></LinearLayout>
 
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            app:srcCompat="@drawable/touxiang" />
     </LinearLayout>
 
     <LinearLayout
@@ -45,11 +25,11 @@
         <EditText
             android:id="@+id/login_username"
             android:layout_width="fill_parent"
-            android:layout_height="40dip"
-            android:layout_marginLeft="20dip"
+            android:layout_height="30dip"
+            android:layout_marginLeft="70dip"
             android:layout_marginTop="30dip"
-            android:layout_marginRight="20dip"
-            android:background="#ffffff"
+            android:layout_marginRight="70dip"
+            android:background="#ffffef"
             android:hint="用户名"
             android:paddingTop="10dip"
             android:textSize="18dip">
@@ -59,17 +39,47 @@
         <EditText
             android:id="@+id/login_password"
             android:layout_width="fill_parent"
-            android:layout_height="40dip"
-            android:layout_marginLeft="20dip"
+            android:layout_height="30dip"
+            android:layout_marginLeft="70dip"
             android:layout_marginTop="10dip"
-            android:layout_marginRight="20dip"
-            android:background="#ffffff"
+            android:layout_marginRight="70dip"
+            android:background="#ffffef"
             android:hint="密码"
             android:paddingTop="10dip"
             android:password="true"
             android:textSize="18dip">
 
         </EditText>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/login_code"
+                android:layout_width="wrap_content"
+                android:layout_height="30dip"
+                android:layout_marginLeft="70dip"
+                android:layout_marginTop="10dip"
+                android:layout_marginRight="0dip"
+                android:background="#ffffef"
+                android:hint="验证码"
+                android:paddingTop="10dip"
+                android:textSize="18dip">
+
+            </EditText>
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="wrap_content"
+                android:layout_height="30dip"
+                android:layout_marginTop="10dip"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/code" />
+        </LinearLayout>
+
+
     </LinearLayout>
 
     <LinearLayout
@@ -104,11 +114,11 @@
         <Button
             android:id="@+id/login_button"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dip"
             android:layout_marginLeft="100dip"
             android:layout_marginRight="100dip"
             android:background="#5677fc"
-            android:textSize="20dp"
+            android:textSize="18dp"
             android:text="登录" />
 
     </LinearLayout>
