--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -75,6 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="30dip"
                 android:layout_marginTop="10dip"
+                android:layout_marginRight="70dip"
                 android:layout_weight="1"
                 />
         </LinearLayout>
@@ -90,18 +91,18 @@
 
         <CheckBox
             android:id="@+id/cb1"
-            android:layout_width="wrap_content"
+            android:layout_width="100dip"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="50dip"
+            android:layout_marginLeft="70dip"
             android:layout_marginRight="50dip"
             android:text="记住密码" />
 
         <CheckBox
             android:id="@+id/cb2"
-            android:layout_width="wrap_content"
+            android:layout_width="100dip"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="50dip"
-            android:layout_marginRight="50dip"
+
+            android:layout_marginRight="70dip"
             android:text="自动登录" />
     </LinearLayout>
 
