--- a/app/src/main/res/layout/activity_main_text.xml
+++ b/app/src/main/res/layout/activity_main_text.xml
@@ -7,29 +7,22 @@
     tools:context=".activity.MainTextActivity"
     android:background="@drawable/main_background">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/linearLayout5"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:orientation="vertical">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="75dp"
-            android:orientation="horizontal">
+
                 <ImageView
                     android:id="@+id/imageView6"
                     android:layout_width="wrap_content"
                     android:layout_height="75dp"
                     android:layout_marginTop="15dp"
                     android:layout_weight="0"
-                    app:srcCompat="@drawable/main_whu1"
-                    />
-        </RelativeLayout>
-    </LinearLayout>
+                    app:srcCompat="@drawable/main_whu1" />
+
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/linearLayout6"
