--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -46,6 +46,7 @@
             android:layout_width="180dp"
             android:layout_height="35dp"
             android:text="查询"
+			android:background="@drawable/btn_login_selector"
             android:id="@+id/query"
             android:layout_marginTop="30dp"
             >
