--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -29,10 +29,7 @@
                 android:layout_height="?android:attr/actionBarSize"
                 android:background="#7fab96c5"
                 app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                app:popupTheme="@style/AlertDialog.AppCompat.Light"
-                app:contentInsetStart="0dp"
-                android:layout_gravity="center"
-                />
+                app:popupTheme="@style/AlertDialog.AppCompat.Light"/>
 
             <!--星期条-->
             <LinearLayout
@@ -44,12 +41,6 @@
                     android:layout_width="110px"
                     android:layout_height="match_parent"
                     android:gravity="center"/>
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="周日"/>
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
@@ -86,6 +77,12 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="周六"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="周日"/>
             </LinearLayout>
             <!--课程表-->
             <LinearLayout
@@ -99,13 +96,6 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"/>
                 <!--星期一到星期天的布局-->
-                <RelativeLayout
-                    android:id="@+id/sunday"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:layout_margin="1dp"/>
                 <RelativeLayout
                     android:id="@+id/monday"
                     android:layout_width="0dp"
@@ -147,6 +137,13 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:orientation="vertical"
+                    android:layout_margin="1dp"/>
+                <RelativeLayout
+                    android:id="@+id/weekday"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
                     android:layout_marginTop="1dp"
                     android:layout_marginLeft="1dp"
                     android:layout_marginBottom="1dp"/>
@@ -156,4 +153,4 @@
 
     </FrameLayout>
 
-</LinearLayout>
+</ScrollView>
