--- a/app/src/main/res/layout/activity_score_show.xml
+++ b/app/src/main/res/layout/activity_score_show.xml
@@ -1,57 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+android:orientation="vertical"
+android:layout_width="fill_parent"
+android:layout_height="fill_parent"
+    >
 
-    <LinearLayout
-        android:layout_width="match_parent"
+<LinearLayout
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_weight="0">
+
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_weight="0"
-            android:gravity="center"
-            android:text="学年"
-            android:textColor="#75b7a0"/>
-
-        <TextView
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_weight="0"
-            android:gravity="center"
-            android:text="学期"
-            android:textColor="#75b7a0"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="课程名称"
-            android:textColor="#75b7a0"/>
-
-        <TextView
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-
-            android:layout_marginTop="5dp"
-            android:layout_weight="0"
-            android:gravity="center"
-            android:text="成绩"
-            android:textColor="#75b7a0"/>
+        android:layout_weight="3"
+        android:textSize="18dp"
+        android:text="课程名称" />
 
 
-    </LinearLayout>
 
-    <ListView
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listView1"/>
+        android:layout_weight="1"
+        android:textSize="18dp"
+        android:text="课程成绩" />
+
+
+</LinearLayout>
+
+<ListView
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:id="@+id/lv_scoreshow"  />
 
 </LinearLayout>
